--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,12 @@
-body {margin:0;font-family:Arial}
+/*algemene css*/
+html{
+    font-family: "Source Sans Pro", Arial, "Helvetica Neue", Helvetoca, sans-serif;
+    font-size: 18px;
+}
 
+
+
+/*Navbar*/
 .topnav {
   overflow: hidden;
   background-color: #333;
@@ -28,6 +35,55 @@ body {margin:0;font-family:Arial}
   background-color: #555;
   color: white;
 }
+
+
+
+/*cards*/
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 350px;
+    margin-right: 50px;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .container {
+    padding: 2px 16px;
+  }
+
+.card img{
+    width: 100%;
+}
+
+.project-cards{
+    display: flex;
+    flex-flow: row wrap;     
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*media querie's**/
 
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child){
