--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,42 @@ html{
 
 
 
+/*breadcrumbs*/
+/* Style the list */
+ul.breadcrumb {
+    padding: 10px 16px;
+    list-style: none;
+    background-color: #eee;
+  }
+  
+  /* Display list items side by side */
+  ul.breadcrumb li {
+    display: inline;
+    font-size: 18px;
+  }
+  
+  /* Add a slash symbol (/) before/behind each list item */
+  ul.breadcrumb li+li:before {
+    padding: 8px;
+    color: black;
+    content: "/\00a0";
+  }
+  
+  /* Add a color to all links inside the list */
+  ul.breadcrumb li a {
+    color: #0275d8;
+    text-decoration: none;
+  }
+  
+  /* Add a color on mouse-over */
+  ul.breadcrumb li a:hover {
+    color: #01447e;
+    text-decoration: underline;
+  }
+
+
+
+
 /*Navbar*/
 .topnav {
   overflow: hidden;
@@ -43,7 +79,8 @@ html{
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 350px;
+    width: 370px;
+    height: 450px;
     margin-right: 50px;
   }
   
@@ -52,7 +89,9 @@ html{
   }
   
   .container {
-    padding: 2px 16px;
+    margin: 0 10px;
+    border-top: 1px solid springgreen;
+    padding-bottom: 10px;
   }
 
 .card img{
@@ -61,12 +100,67 @@ html{
 
 .project-cards{
     display: flex;
-    flex-flow: row wrap;     
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;     
+}
+
+.sizeBoxPhotoProject{
+    width: 350px;
+    height: 220px;
+    padding-top: 10px;
+    padding-left: 10px;
 }
 
 
 
+/*contact*/
 
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+input[type=email], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+  
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+  
+/* Add a background color and some padding around the form */
+.container-contactform {
+    width: 425px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
 
 
 
@@ -114,4 +208,13 @@ html{
     width: 100%;
     text-align: left;
   }
+}
+
+@media screen and (min-width: 850px) {
+    html{
+        margin: 0 300px;
+    }
+    .container-contactform {
+        width: 800px;
+    }
 }
