--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,12 @@
 html{
     font-family: "Source Sans Pro", Arial, "Helvetica Neue", Helvetoca, sans-serif;
     font-size: 18px;
+    background-color: #E8EAE3;
+    color: #373833;
+}
+
+a{
+  color: #e71632;
 }
 
 
@@ -45,7 +51,7 @@ ul.breadcrumb {
 /*Navbar*/
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: black;
 }
 
 .topnav a {
@@ -59,7 +65,7 @@ ul.breadcrumb {
 }
 
 .active {
-  background-color: #04AA6D;
+  background-color: #e71632;
   color: white;
 }
 
@@ -90,7 +96,7 @@ ul.breadcrumb {
   
   .container {
     margin: 0 10px;
-    border-top: 1px solid springgreen;
+    border-top: 1px solid #e71632;
     padding-bottom: 10px;
   }
 
@@ -175,7 +181,7 @@ input[type=email], select, textarea {
   
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
-    background-color: #04AA6D;
+    background-color: #e71632;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -185,7 +191,7 @@ input[type=submit] {
   
 /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #b8031b;
 }
   
 /* Add a background color and some padding around the form */
