--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,7 @@ html{
     background-color: #E8EAE3;
     color: #373833;
     font-family: 'Arima Madurai', cursive;
+    margin: 0 250px;
 }
 
 a{
@@ -26,6 +27,12 @@ h1{
   padding-top: 0;
   margin-top: 0;
   color: #373833;
+}
+
+footer{
+  border-top: 1px solid #e71632;
+  margin-top: 50px;
+  text-align: center;
 }
 
 
@@ -70,6 +77,7 @@ ul.breadcrumb {
 .topnav {
   overflow: hidden;
   background-color: black;
+  margin-bottom: 50px;
 }
 
 .topnav a {
@@ -105,7 +113,7 @@ ul.breadcrumb {
     transition: 0.3s;
     width: 370px;
     height: 450px;
-    margin-right: 50px;
+    margin: 25px 25px 25px 25px;
   }
   
   .card:hover {
@@ -214,10 +222,24 @@ input[type=submit]:hover {
   
 /* Add a background color and some padding around the form */
 .container-contactform {
-    width: 425px;
+    width: 800px;
     border-radius: 5px;
+    margin: 0 auto;  
     background-color: #f2f2f2;
     padding: 20px;
+}
+
+
+
+/*werkplekleren*/
+.center h3{
+  text-align: center;
+}
+
+.center img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
@@ -338,9 +360,7 @@ input[type=submit]:hover {
     float: right;
     display: block;
   }
-}
 
-@media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
@@ -359,11 +379,45 @@ input[type=submit]:hover {
     width: 100%;
     text-align: left;
   }
+
+  html{
+    margin: 0 5px;
+  }
 }
 
-@media screen and (min-width: 850px) {
-    .container-contactform {
-      margin: 0 300px;  
-      width: 800px;
-    }
+@media screen and (max-width: 650px) {
+  .container-contactform{
+    width: 425px;
+  }
+}
+
+@media screen and (max-width: 1500px){
+  html{
+    margin: 0 200px;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .container-contactform{
+    width: 600px;
+  }
+
+  html{
+    margin: 0 200px;
+  }
+}
+
+@media screen and (max-width: 1100px){
+  .container-contactform{
+    width: 500px;
+  }
+  html{
+    margin: 0 50px;
+  }
+}
+
+@media screen and (max-width: 700px){
+  html{
+    margin: 0 20px;
+  }
 }
