contactformulier responsive maken

--- a/style/style.css
+++ b/style/style.css
@@ -394,7 +394,7 @@ input[type=submit]:hover {
 
 @media screen and (max-width: 650px) {
   .container-contactform{
-    width: 425px;
+    width: 350px !important;
   }
 }
 
