--- a/style/style.css
+++ b/style/style.css
@@ -248,6 +248,7 @@ input[type=submit]:hover {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 50%;
 }
 
 
@@ -426,5 +427,15 @@ input[type=submit]:hover {
 @media screen and (max-width: 700px){
   html{
     margin: 0 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .card{
+    width: 300px;
+  }
+
+  .card img{
+    max-width: 280px;
   }
 }
