--- a/style/style.css
+++ b/style/style.css
@@ -444,9 +444,36 @@ input[type=submit]:hover {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 440px) {
   .container-contactform{
     width: 200px !important;
   }
-  
+  html{
+    margin: 0 0;
+  }
+
+  .card.img{
+    width: 100%;
+  }
+
+  .sizeBoxPhotoProject{
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .card{
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .card{
+    width: 250px;
+  }
+
+  .card img{
+    max-width: 230px;
+  }
 }
