--- a/style/style.css
+++ b/style/style.css
@@ -304,6 +304,7 @@ input[type=submit]:hover {
   bottom: 8px;
   width: 100%;
   text-align: center;
+  width: 97.5%;
 }
 
 /* Number text (1/3 etc) */
@@ -459,6 +460,10 @@ input[type=submit]:hover {
   .sizeBoxPhotoProject{
     width: 100%;
   }
+
+  .text{
+    width: 95%;
+  }
 }
 
 @media screen and (max-width: 380px) {
@@ -475,5 +480,9 @@ input[type=submit]:hover {
 
   .card img{
     max-width: 230px;
+  }
+
+  .text{
+    width: 94%;
   }
 }
