--- a/style/style.css
+++ b/style/style.css
@@ -167,6 +167,7 @@ ul.breadcrumb {
 
 .photo{
   grid-area: photo;
+  width: 150px;
 }
 
 .info{
@@ -297,7 +298,7 @@ input[type=submit]:hover {
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  color: #ffffff;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -305,6 +306,8 @@ input[type=submit]:hover {
   width: 100%;
   text-align: center;
   width: 97.5%;
+  background-color: darkgrey;
+  opacity: 0.7;
 }
 
 /* Number text (1/3 etc) */
