--- a/style/style.css
+++ b/style/style.css
@@ -453,6 +453,7 @@ input[type=submit]:hover {
 @media screen and (max-width: 500px) {
   .card{
     width: 300px;
+    height: 500px;
   }
 
   .card img{
