--- a/style/style.css
+++ b/style/style.css
@@ -254,22 +254,18 @@ input[type=submit]:hover {
 
 
 
-/*detailpagina
-* {box-sizing:border-box}*/
+/*detailpagina*/
 
-/* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
-/* Hide the images by default */
 .mySlides {
   display: none;
 }
 
-/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -285,18 +281,15 @@ input[type=submit]:hover {
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
 .text {
   color: #ffffff;
   font-size: 15px;
@@ -310,7 +303,6 @@ input[type=submit]:hover {
   opacity: 0.7;
 }
 
-/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -319,7 +311,7 @@ input[type=submit]:hover {
   top: 0;
 }
 
-/* The dots/bullets/indicators */
+
 .dot {
   cursor: pointer;
   height: 15px;
