--- a/style/style.css
+++ b/style/style.css
@@ -121,6 +121,7 @@ ul.breadcrumb {
     width: 370px;
     height: 450px;
     margin: 25px 25px 25px 25px;
+    background-color: #f2f2f2;
   }
   
   .card:hover {
