--- a/style/style.css
+++ b/style/style.css
@@ -271,6 +271,7 @@ input[type=email], select, textarea {
 input[type=submit] {
     background-color: #e71632;
     color: white;
+    width: 100px;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
@@ -289,6 +290,25 @@ input[type=submit]:hover {
     margin: 0 auto;  
     background-color: #f2f2f2;
     padding: 20px;
+}
+
+.contactLink{
+  background-color: #e71632;
+  width: 100px;
+  padding: 10px 0;
+  margin-right: 20px;
+  margin-bottom: 50px;
+  border: none;
+  border-radius: 4px;
+}
+
+.contactLink a{
+  color: white;
+  text-decoration: none;
+}
+
+.contactLink:hover{
+  background-color: #b8031b;
 }
 
 
